@@ -14,6 +14,7 @@ opensesame (2.9.2~pre3-ubuntu1) utopic; urgency=medium
     - Deprecate transparent variable management option
     - More comprehensive translation possible
     - Hide xpyriment-gst back-end (not ready for production)
+    - Custom cursor in sketchpad for increased visibility
   * Translation updates
     - German translation updated (de_DE)
   * Windows packaging
